--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
   "homepage": "https://github.com/xpressengine/plugin-board#readme",
   "dependencies": {
     "babel-preset-stage-0": "^6.5.0",
+    "ckeditor": "^4.6.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "lodash": "^4.17.2",
     "moment": "^2.17.1",
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
-    "react-quill": "^0.4.1",
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
