Class 정리, 관리자 정의, 게시판 코드 재사용을 위한 확장 class 정의 (설정 관련 class)

--- a/composer.json
+++ b/composer.json
@@ -24,14 +24,19 @@
       "title": "react-redux Board",
       "component": {
         "module/react_board@board": {
-          "class": "Blueng\\XpressenginePlugin\\ReactBoard\\Modules\\Board",
+          "class": "Blueng\\ReactBoard\\ReactBoardModule",
           "name": "react-redux Board",
           "description": "react-redux Board 모듈"
         },
         "module/react_board@board/skin/react_board@default": {
-          "class": "Blueng\\XpressenginePlugin\\ReactBoard\\Skins\\DefaultSkin",
+          "class": "Blueng\\ReactBoard\\Skins\\DefaultSkin",
           "name": "react-redux Board 기본 스킨",
           "description": "react-redux Board 기본 스킨."
+        },
+        "module/react_board@board/settingsSkin/react_board@default": {
+          "class": "Blueng\\ReactBoard\\Skins\\SettingsSkin",
+          "name": "react-redux Board 관리자 스킨",
+          "description": "react-redux Board 관리자 스킨."
         }
       }
     }
@@ -40,7 +45,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Blueng\\XpressenginePlugin\\ReactBoard\\": "src/"
+      "Blueng\\ReactBoard\\": "src/"
     }
   }
 }
