composer.json 수정

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "xpressengine-plugin/react_board",
-  "description": "This Package is Xpressengine Plugin - react-redux Board.",
+  "description": "This Package is Xpressengine Plugin - React SPA Board.",
   "keywords": [
     "xpressengine",
     "plugin"
@@ -15,28 +15,34 @@
     {
       "name": "seungman choi",
       "email": "blueng.choi@gmail.com",
-      "homepage": "http://input.your.site",
+      "homepage": "blueng.tistory.com",
       "role": "Developer"
     }
   ],
   "extra": {
     "xpressengine": {
-      "title": "react-redux Board",
+      "title": "React SPA Board.",
       "component": {
         "module/react_board@board": {
           "class": "Blueng\\ReactBoard\\ReactBoardModule",
-          "name": "react-redux Board",
-          "description": "react-redux Board 모듈"
+          "name": "React SPA Board",
+          "description": "React SPA Board. 리액트와 리덕스, 라우트를 사용하였고 기존 게시판 기능을 최소화하여 SPA로 구현한 게시판입니다.",
+          "screenshot" : [
+            "/plugins/board/assets/img/screenshots/menuType1.png"
+          ]
         },
         "module/react_board@board/skin/react_board@default": {
-          "class": "Blueng\\ReactBoard\\Skins\\DefaultSkin",
-          "name": "react-redux Board 기본 스킨",
-          "description": "react-redux Board 기본 스킨."
+          "class": "Blueng\\ReactBoard\\ReactBoardModule",
+          "name": "React SPA Board 기본 스킨",
+          "description": "React SPA Board 기본 스킨."
         },
-        "module/react_board@board/settingsSkin/react_board@default": {
-          "class": "Blueng\\ReactBoard\\Skins\\SettingsSkin",
-          "name": "react-redux Board 관리자 스킨",
-          "description": "react-redux Board 관리자 스킨."
+         "module/react_board@board/settingsSkin/react_board@default": {
+           "class": "Blueng\\ReactBoard\\Skins\\SettingsSkin",
+           "name": "react-redux Board 관리자 스킨",
+           "description": "react-redux Board 관리자 스킨."
+           "class": "Blueng\\XpressenginePlugin\\ReactBoard\\Skins\\DefaultSkin",
+           "name": "React SPA Board 기본 스킨",
+           "description": "React SPA Board 기본 스킨."
         }
       }
     }
@@ -45,7 +51,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Blueng\\ReactBoard\\": "src/"
+      "Blueng\\XpressenginePlugin\\ReactBoard\\": "src/"
     }
   }
 }
