--- a/composer.json
+++ b/composer.json
@@ -28,19 +28,16 @@
           "name": "React SPA Board",
           "description": "React SPA Board. 리액트와 리덕스, 라우트를 사용하였고 기존 게시판 기능을 최소화하여 SPA로 구현한 게시판입니다.",
           "screenshot" : [
-            "/plugins/board/assets/img/screenshots/menuType1.png"
+            "/plugins/react_board/assets/img/screenshots/menuType1.png"
           ]
         },
         "module/react_board@board/skin/react_board@default": {
-          "class": "Blueng\\ReactBoard\\ReactBoardModule",
+          "class": "Blueng\\ReactBoard\\Skins\\DefaultSkin",
           "name": "React SPA Board 기본 스킨",
           "description": "React SPA Board 기본 스킨."
         },
          "module/react_board@board/settingsSkin/react_board@default": {
            "class": "Blueng\\ReactBoard\\Skins\\SettingsSkin",
-           "name": "react-redux Board 관리자 스킨",
-           "description": "react-redux Board 관리자 스킨."
-           "class": "Blueng\\XpressenginePlugin\\ReactBoard\\Skins\\DefaultSkin",
            "name": "React SPA Board 기본 스킨",
            "description": "React SPA Board 기본 스킨."
         }
@@ -51,7 +48,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Blueng\\XpressenginePlugin\\ReactBoard\\": "src/"
+      "Blueng\\ReactBoard\\": "src/"
     }
   }
 }
