--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     {
       "name": "seungman choi",
       "email": "blueng.choi@gmail.com",
-      "homepage": "blueng.tistory.com",
+      "homepage": "http://blueng.tistory.com",
       "role": "Developer"
     }
   ],
