--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack  --progress --colors --watch --config",
+    "dev": "webpack  --progress --colors --watch",
     "build": "webpack -p",
     "start": "./node_modules/.bin/webpack-dev-server --hot --host 0.0.0.0"
   },
@@ -20,9 +20,7 @@
   },
   "homepage": "https://github.com/xpressengine/plugin-board#readme",
   "dependencies": {
-    "babel-preset-stage-0": "^6.5.0",
     "ckeditor": "^4.6.2",
-    "extract-text-webpack-plugin": "^1.0.1",
     "lodash": "^4.17.2",
     "moment": "^2.17.1",
     "react": "^15.4.1",
@@ -35,20 +33,23 @@
     "redux": "^3.6.0",
     "redux-form": "^6.4.3",
     "redux-observable": "^0.12.2",
-    "rxjs": "^5.0.2",
-    "webpack": "^1.13.3",
-    "webpack-merge": "^1.0.2"
+    "rxjs": "^5.0.2"
   },
   "devDependencies": {
-    "babel-core": "^6.7.0",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-plugin-transform-class-properties": "^6.23.0",
+    "babel-preset-env": "^1.3.2",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "^6.22.0",
     "clean-webpack-plugin": "^0.1.14",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.28.0",
+    "extract-text-webpack-plugin": "^2.1.0",
     "path": "^0.12.7",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+    "style-loader": "^0.16.1",
+    "webpack": "^2.3.3",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-merge": "^4.1.0"
   }
 }
